# WhatsAnalyzer

./: CMakeLists.txt  Dialog.cpp  Dialog.h  Dialogue.cpp  Dialogue.h  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  MessageProcessor.cpp  MessageProcessor.h  Nachricht.cpp  Nachricht.h  README.md  easylogging++.h  index.html  main.cpp  params.json
MessageProcessors/: AndroidMessageProcessorImpl.h  IOSMessageProcessorImpl.h
